MFC r284229: Add support for '_' occurring at the beginning or end of a name component.

PR:		176093
Submitted by:	landonf__at__bikemonkey.org

Former-commit-id: c45d296e3c6801143ccf36b96e119fab18380d6b